Tweaks to issues bar. adding back in dark mode

--- a/app/assets/stylesheets/components/_message_column.scss
+++ b/app/assets/stylesheets/components/_message_column.scss
@@ -179,3 +179,13 @@ body {
 .message-top p {
   margin-bottom: 12px;
 }
+
+.chat-message-column {
+  background-color: $white;
+}
+
+.dark-mode {
+  .chat-message-column {
+    background-color: $gray;
+  }
+}
